[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/GameContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/GameState.gd" type="Script" id=2]

[node name="GameState" type="Node2D"]
script = ExtResource( 2 )

[node name="GameContainer" parent="." instance=ExtResource( 1 )]
position = Vector2( -65, 0 )

[node name="TimerLabel" type="Label" parent="."]
margin_left = 928.0
margin_top = 84.0
margin_right = 968.0
margin_bottom = 98.0

[node name="WinCountdownTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="timeout" from="WinCountdownTimer" to="." method="_on_WinCountdownTimer_timeout"]
